force-app/main/default/objects/Account/fields/Is_org_running_its_app_on_Public_Cloud__c.field-meta.xml
<CustomField>
    <fullName>Is_org_running_its_app_on_Public_Cloud__c</fullName>
    <label>Is org running its app on Public Cloud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>