force-app/main/default/objects/Account/fields/Is_Ready_for_Integration__c.field-meta.xml
<CustomField>
    <fullName>Is_Ready_for_Integration__c</fullName>
    <description>Created by Nandish for Integration</description>
    <formula>OR(AND(NOT(ISBLANK(PartnerType__c)) || ISPICKVAL(Type,&apos;Customer&apos;), ISPICKVAL( KYC_Approval_Status__c , &apos;Approved&apos;)),
AND(ISPICKVAL(Type,&apos;End User&apos;),
Contract_Approved__c ),
OnlineRegistered__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>DO NOT ADD TO LAYOUT</inlineHelpText>
    <label>Is Ready for Integration</label>
    <type>Checkbox</type>
</CustomField>