force-app/main/default/objects/Account/fields/Is_SCF_Generated__c.field-meta.xml
<CustomField>
    <fullName>Is_SCF_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is SCF Generated</label>
    <type>Checkbox</type>
</CustomField>