force-app/main/default/objects/Account/fields/Is_the_Org_colocating_in_3rd_party_DC__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Org_colocating_in_3rd_party_DC__c</fullName>
    <label>Is the Org colocating in 3rd party DC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>