force-app/main/default/objects/Account/fields/Is_the_Org_running_a_captive_datacentre__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Org_running_a_captive_datacentre__c</fullName>
    <label>Is the Org running a captive datacentre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>