force-app/main/default/objects/Account/fields/Is_your_Primary_Datacenter_Captive_or_3r__c.field-meta.xml
<CustomField>
    <fullName>Is_your_Primary_Datacenter_Captive_or_3r__c</fullName>
    <label>Is Primary DC OnPremise or 3rd Party?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OnPremise</fullName>
            </value>
            <value>
                <fullName>3rd Party</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>