force-app/main/default/objects/Account/fields/It_Managed_Services_IT_Admin_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>It_Managed_Services_IT_Admin_Monitoring__c</fullName>
    <label>It Managed Services (ITAdmin/Monitoring)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inhouse</fullName>
            </value>
            <value>
                <fullName>Outsourced</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Cloud Managed Services (AWS/Azure/GCP)</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>