force-app/main/default/objects/Account/fields/ITSM_used_ServiceNow_Remedy_etc__c.field-meta.xml
<CustomField>
    <fullName>ITSM_used_ServiceNow_Remedy_etc__c</fullName>
    <label>ITSM used (ServiceNow/Remedy etc)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>