force-app/main/default/objects/Account/fields/ITSM_yes__c.field-meta.xml
<CustomField>
    <fullName>ITSM_yes__c</fullName>
    <label>If ITSM used is yes, please specify tool</label>
    <type>TextArea</type>
</CustomField>