force-app/main/default/objects/Account/fields/Key_Decision_Maker_s__c.field-meta.xml
<CustomField>
    <fullName>Key_Decision_Maker_s__c</fullName>
    <label>Key Decision Maker (s)</label>
    <type>TextArea</type>
</CustomField>