force-app/main/default/objects/Account/fields/Key_Influencer_s__c.field-meta.xml
<CustomField>
    <fullName>Key_Influencer_s__c</fullName>
    <label>Key Influencer (s)</label>
    <type>TextArea</type>
</CustomField>