force-app/main/default/objects/Account/fields/Key_Initiatives_planned_with_timelines__c.field-meta.xml
<CustomField>
    <fullName>Key_Initiatives_planned_with_timelines__c</fullName>
    <inlineHelpText>Key Initiatives planned by the organisation with timelines</inlineHelpText>
    <label>Key Initiatives planned with timelines</label>
    <type>TextArea</type>
</CustomField>