force-app/main/default/objects/Account/fields/KYC_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>KYC_Approval_Status__c</fullName>
    <inlineHelpText>This denotes the KYC Approval status of the Account.</inlineHelpText>
    <label>KYC Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not-Submitted</fullName>
                <default>true</default>
                <label>Not-Submitted</label>
            </value>
            <value>
                <fullName>In-Process</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>