force-app/main/default/objects/Account/fields/Lead_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Company_Name__c</fullName>
    <label>Lead Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>