force-app/main/default/objects/Account/fields/Line_Of_Business_LOB__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business_LOB__c</fullName>
    <label>Line Of Business (LOB)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>