force-app/main/default/objects/Account/fields/MSANumber__c.field-meta.xml
<CustomField>
    <fullName>MSANumber__c</fullName>
    <label>YIS MSA Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>