force-app/main/default/objects/Account/fields/Name_Change_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Name_Change_Effective_Date__c</fullName>
    <label>Name Change Effective Date</label>
    <type>Date</type>
</CustomField>