force-app/main/default/objects/Account/fields/Network_Services__c.field-meta.xml
<CustomField>
    <fullName>Network_Services__c</fullName>
    <label>Network Services currently used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internet Leased Line</fullName>
            </value>
            <value>
                <fullName>P2P/Leased Line</fullName>
            </value>
            <value>
                <fullName>MPLS</fullName>
            </value>
            <value>
                <fullName>IPLC</fullName>
            </value>
            <value>
                <fullName>CDN</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>SD-WAN</fullName>
            </value>
            <value>
                <fullName>Exchange Connectivity (Xtreme-IX,DE-CIX, NIXI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>