force-app/main/default/objects/Account/fields/New_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Name__c</fullName>
    <label>New Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>