force-app/main/default/objects/Account/fields/No_of_Office_Locations_Branches__c.field-meta.xml
<CustomField>
    <fullName>No_of_Office_Locations_Branches__c</fullName>
    <label>No of Office Locations/Branches</label>
    <length>200</length>
    <type>Text</type>
</CustomField>