force-app/main/default/objects/Account/fields/OMT_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>OMT_Approval_Status__c</fullName>
    <inlineHelpText>This denotes the Name Change SCF Approval Status of the Account.</inlineHelpText>
    <label>OMT Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Not - Submitted</fullName>
                <default>true</default>
                <label>Not - Submitted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>