force-app/main/default/objects/Account/fields/Other_Public_Cloud_Platform_Services__c.field-meta.xml
<CustomField>
    <fullName>Other_Public_Cloud_Platform_Services__c</fullName>
    <label>Other Public Cloud Platform Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>DBaaS</fullName>
            </value>
            <value>
                <fullName>Object Storage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>