force-app/main/default/objects/Account/fields/p2p_link_vendor_capacity__c.field-meta.xml
<CustomField>
    <fullName>p2p_link_vendor_capacity__c</fullName>
    <inlineHelpText>For P2P, please specify link count, vendor name and capacity.</inlineHelpText>
    <label>If P2P, link count, vendor, capacity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>