force-app/main/default/objects/Account/fields/Pain_areas_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Pain_areas_Challenges__c</fullName>
    <label>Pain areas / Challenges</label>
    <type>TextArea</type>
</CustomField>