force-app/main/default/objects/Account/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <inlineHelpText>Total Length 10. 5 Alphabets, followed by 4 Digits and 1 Alphabet</inlineHelpText>
    <label>PAN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>