force-app/main/default/objects/Account/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Accounts</relationshipLabel>
    <relationshipName>PartnerAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>