force-app/main/default/objects/Account/fields/Partner_Primary_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Source_Account__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp;Partner_Primary_Id__c &amp;&quot;/view&quot;, Partner_Primary_Source_Name__c,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Primary Source Account</label>
    <type>Text</type>
</CustomField>