force-app/main/default/objects/Account/fields/Partner_Primary_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Primary_Source_Id__c</fullName>
    <label>Partner Primary Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>