force-app/main/default/objects/Account/fields/Partner_Secondary_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary_Id__c</fullName>
    <label>Partner Secondary Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>