force-app/main/default/objects/Account/fields/Partner_Secondary_Source_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary_Source_Account__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp; Partner_Secondary_Id__c &amp;&quot;/view&quot;, Partner_Secondary_Source_Name__c ,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Secondary Source Account</label>
    <type>Text</type>
</CustomField>