force-app/main/default/objects/Account/fields/Partner_Secondary_Source_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Secondary_Source_Name__c</fullName>
    <label>Partner Secondary Source Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>