force-app/main/default/objects/Account/fields/Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>Partner_Source__c</fullName>
    <label>First Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>