force-app/main/default/objects/Account/fields/Partner_Tertiary_Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Tertiary_Source_Id__c</fullName>
    <label>Partner Tertiary Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>