force-app/main/default/objects/Account/fields/PartnerType__c.field-meta.xml
<CustomField>
    <fullName>PartnerType__c</fullName>
    <label>Partner Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alliance Partner</fullName>
            </value>
            <value>
                <fullName>Reseller Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
            <value>
                <fullName>Consultant Partner</fullName>
            </value>
            <value>
                <fullName>Distributor Partner-Commission</fullName>
            </value>
            <value>
                <fullName>Distributor Partner-TP</fullName>
            </value>
            <value>
                <fullName>Business Partner</fullName>
            </value>
            <value>
                <fullName>ERP Partner-TP</fullName>
            </value>
            <value>
                <fullName>ERP Partner-Commission</fullName>
            </value>
            <value>
                <fullName>ERP Technology Partner B2B</fullName>
            </value>
            <value>
                <fullName>YIC Partner</fullName>
            </value>
            <value>
                <fullName>Inactive Partner</fullName>
            </value>
            <value>
                <fullName>Government Partner - TP</fullName>
            </value>
            <value>
                <fullName>Government Partner - Commission</fullName>
            </value>
            <value>
                <fullName>Government Partner - Technology B2B</fullName>
            </value>
            <value>
                <fullName>Deboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>