force-app/main/default/objects/Account/fields/Please_select_software_used_for_GWS__c.field-meta.xml
<CustomField>
    <fullName>Please_select_software_used_for_GWS__c</fullName>
    <label>Software used for Graphic Workstation?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutoCAD</fullName>
            </value>
            <value>
                <fullName>SolidWorks</fullName>
            </value>
            <value>
                <fullName>Ansys</fullName>
            </value>
            <value>
                <fullName>Autodesk Maya</fullName>
            </value>
            <value>
                <fullName>Nuke</fullName>
            </value>
            <value>
                <fullName>Foundry</fullName>
            </value>
            <value>
                <fullName>Siemens Annex</fullName>
            </value>
            <value>
                <fullName>V-ray</fullName>
            </value>
            <value>
                <fullName>Unity</fullName>
            </value>
            <value>
                <fullName>Autodesk Arnold</fullName>
            </value>
            <value>
                <fullName>Autodesk Flame</fullName>
            </value>
            <value>
                <fullName>Substance</fullName>
            </value>
            <value>
                <fullName>Catia</fullName>
            </value>
            <value>
                <fullName>PTC Creo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>