force-app/main/default/objects/Account/fields/Please_Select_your_Public_Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Please_Select_your_Public_Cloud_Provider__c</fullName>
    <label>Please Select your Public Cloud Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>AliCloud</fullName>
            </value>
            <value>
                <fullName>Ctrl-S</fullName>
            </value>
            <value>
                <fullName>WebWerks</fullName>
            </value>
            <value>
                <fullName>NextGen</fullName>
            </value>
            <value>
                <fullName>Sify</fullName>
            </value>
            <value>
                <fullName>NTT</fullName>
            </value>
            <value>
                <fullName>ESDS</fullName>
            </value>
            <value>
                <fullName>Zenlayer</fullName>
            </value>
            <value>
                <fullName>Digital Ocean</fullName>
            </value>
            <value>
                <fullName>Linode</fullName>
            </value>
            <value>
                <fullName>BSNL</fullName>
            </value>
            <value>
                <fullName>Nxtra</fullName>
            </value>
            <value>
                <fullName>NIC</fullName>
            </value>
            <value>
                <fullName>Yotta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>