force-app/main/default/objects/Account/fields/Primary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp; Primary_Campaign_Id__c &amp;&quot;/view&quot;, Primary_Campaign_Name__c ,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Campaign</label>
    <type>Text</type>
</CustomField>