force-app/main/default/objects/Account/fields/Primary_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Campaign_Name__c</fullName>
    <label>Primary Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>