force-app/main/default/objects/Account/fields/Products_which_Yotta_can_position__c.field-meta.xml
<CustomField>
    <fullName>Products_which_Yotta_can_position__c</fullName>
    <label>Products which Yotta can position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>IT Management</fullName>
            </value>
            <value>
                <fullName>IT Security</fullName>
            </value>
            <value>
                <fullName>Network &amp; Connectivity</fullName>
            </value>
            <value>
                <fullName>Yotta Cloud</fullName>
            </value>
            <value>
                <fullName>Federated Cloud</fullName>
            </value>
            <value>
                <fullName>Private Cloud</fullName>
            </value>
            <value>
                <fullName>Traded Goods</fullName>
            </value>
            <value>
                <fullName>Yotta Smart Solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>