force-app/main/default/objects/Account/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>Remarks fr Account Name Change SCF</description>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>