force-app/main/default/objects/Account/fields/SDWAN_sites_provider__c.field-meta.xml
<CustomField>
    <fullName>SDWAN_sites_provider__c</fullName>
    <inlineHelpText>For SDWAN, please specify the total number of sites and current provider</inlineHelpText>
    <label>If SDWAN, sites and current provider?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>