force-app/main/default/objects/Account/fields/Secondary_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; &amp; Secondary_Campaign_Id__c &amp;&quot;/view&quot;, Secondary_Campaign_Name__c ,&quot;_top&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Campaign</label>
    <type>Text</type>
</CustomField>