force-app/main/default/objects/Account/fields/Secondary_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign_Id__c</fullName>
    <label>Secondary Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>