force-app/main/default/objects/Account/fields/Secondary_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Campaign_Name__c</fullName>
    <label>Secondary Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>