force-app/main/default/objects/Account/fields/Secondary_Source__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source__c</fullName>
    <label>Secondary Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>